--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.8.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
@@ -39,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
