--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-swipeable": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
