--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.8.0",
+    "firebase": "^9.15.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-swipeable": "^7.0.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
